Fixed logo sizing on smaller windows

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ font-weight: 700;
 /* --------------- Main Navigation Styles --------------- */
 
 #mainlogo {
-	width: 11%;
+	width: 7em;
 	position: absolute;
 	top: -2px;
 }
